# billy-bevy-learning

./: .gitignore  Cargo.toml  Makefile  flake.nix  index.html  table-tennis.d.ts  table-tennis.js  table-tennis_bg.wasm.d.ts
bins/table-tennis/: Cargo.toml
bins/table-tennis/src/: main.rs
