[workspace]
resolver = "2"
members = [
  "bins/table-tennis"
]

[workspace.dependencies]
bevy = { version = "0.12.1", features = [ "wayland" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# required for dynamic linking
[profile.dev.package."*"]
opt-level = 3

